# students_draft

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  deps.py  dictionaries.py  reports.py  resumes.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  resume.py  student.py
backend/app/schemas/: common.py  report.py  resume.py
backend/app/services/: audit.py  dictionaries.py  embedding_provider.py  group_report.py  ingestion.py  keyword_retriever.py  llm_extractor.py  llm_provider.py  normalizer.py  parser.py  pipeline.py  portrait.py  repository.py  rerank_provider.py  review.py  rule_extractor.py  segmenter.py  semantic_chunking.py  student_identity.py  student_retriever.py  student_semantic_index.py  student_vector_store.py  vectorize.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_services.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts  resumes.ts
frontend/src/components/: ProtectedRoute.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: GroupReportPage.css  GroupReportPage.tsx  (+6 more)
sample_resumes/: manifest.md
sample_resumes/sources/: resume_01_王晨曦_北京大学.txt  resume_02_李沐阳_清华大学.txt  resume_03_周子宁_复旦大学.txt  resume_04_陈思远_南京邮电大学.txt  resume_05_赵雨桐_暨南大学.txt  resume_06_何嘉琳_西南财经大学.txt  resume_07_孙睿哲_山东建筑大学.txt  resume_08_吴可欣_湖北经济学院.txt  resume_09_郑航_广西民族大学.txt  resume_10_黄奕辰_湖南工程学院.txt
(+2 files in other folders)
